[gd_scene load_steps=3 format=3 uid="uid://d21eco4mp6ath"]

[ext_resource type="Script" path="res://properties/unit_components/host_station/host_station_properties.gd" id="1_efq3l"]
[ext_resource type="Theme" uid="uid://cdrs6kxi0mn0v" path="res://resources/themes/ua_theme.tres" id="1_moywq"]

[node name="HostStationProperties" type="VBoxContainer"]
script = ExtResource("1_efq3l")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HSnumberLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Host station N:"

[node name="HSnameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "HostStationName"

[node name="HSeparator3" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="GridContainer2" type="GridContainer" parent="HBoxContainer5"]
layout_mode = 2
columns = 3

[node name="EnergyLabel" type="Label" parent="HBoxContainer5/GridContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Energy: "

[node name="EnergyLineEdit" type="LineEdit" parent="HBoxContainer5/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0000"
shortcut_keys_enabled = false

[node name="Control" type="Control" parent="HBoxContainer5/GridContainer2"]
layout_mode = 2

[node name="ViewAngleLabel" type="Label" parent="HBoxContainer5/GridContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "View angle: "

[node name="ViewAngleLineEdit" type="LineEdit" parent="HBoxContainer5/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="ViewAngleCheckButton" type="CheckButton" parent="HBoxContainer5/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="ReloadConstLabel" type="Label" parent="HBoxContainer5/GridContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Reload const: "

[node name="ReloadConstLineEdit" type="LineEdit" parent="HBoxContainer5/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "00000"

[node name="ReloadConstCheckButton" type="CheckButton" parent="HBoxContainer5/GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="XposLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "x: "

[node name="XposHostStationLineEdit" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0000"

[node name="YposLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "y: "

[node name="YposHostStationLineEdit" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0000"

[node name="ZposLabel" type="Label" parent="HBoxContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "z: "

[node name="ZposHostStationLineEdit" type="LineEdit" parent="HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "0000"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="EnemyBehaviorLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "Enemy behavior (AI only):"

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 4

[node name="ConqueringLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Conquering sectors:"

[node name="ConqueringHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ConqueringValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme = ExtResource("1_moywq")
theme_override_font_sizes/font_size = 12
text = "000"

[node name="ConqueringPercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "%"

[node name="ConqueringDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Conquering delay:"

[node name="ConqueringDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="ConqueringDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="DefenseLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Defense:"

[node name="DefenseHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="DefenseValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="DefensePercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="DefenseDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Defense delay:"

[node name="DefenseDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="DefenseDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler2" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="ReconnaissanceLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Reconnaissance:"

[node name="ReconnaissanceHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="ReconnaissanceValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="ReconnaissancePercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="ReconnaissanceDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Reconnaissance delay:"

[node name="ReconnaissanceDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="ReconnaissanceDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler3" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="AttackingLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Attacking:"

[node name="AttackingHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="AttackingValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="AttackingPercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="AttackingDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Attacking delay:"

[node name="AttackingDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="AttackingDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler4" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="PowerBuildingLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Power building:"

[node name="PowerBuildingHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="PowerBuildingValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="PowerBuildingPercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="PowerBuildingDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Power building delay:"

[node name="PowerBuildingDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="PowerBuildingDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler5" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="RadarBuildingLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Radar building:"

[node name="RadarBuildingHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="RadarBuildingValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="RadarBuildingPercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="RadarBuildingDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Radar building delay:"

[node name="RadarBuildingDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="RadarBuildingDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler6" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="FlakBuildingLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Flak building:"

[node name="FlakBuildingHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="FlakBuildingValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="FlakBuildingPercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="FlakBuildingDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Flak building delay:"

[node name="FlakBuildingDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="FlakBuildingDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler7" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="MovingStationLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Moving station:"

[node name="MovingStationHSlider" type="HSlider" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[node name="MovingStationValueLabel" type="Label" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 12
text = "000"

[node name="MovingStationPercentLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "%"

[node name="MovingStationDelayLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Moving station delay:"

[node name="MovingStationDelayLineEdit" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/minimum_character_width = 2
theme_override_font_sizes/font_size = 12
text = "000"

[node name="MovingStationDelaySecondsLabel" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "sec"

[node name="Filler8" type="Control" parent="GridContainer"]
layout_mode = 2

[node name="HSeparator4" type="HSeparator" parent="."]
layout_mode = 2

[node name="MBstatusLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "MB status:"
horizontal_alignment = 1

[node name="MBstatusHostStationCheckBox" type="CheckBox" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
theme_override_font_sizes/font_size = 12
text = "Make this host station invisible in the Mission Briefing"

[node name="HSeparator6" type="HSeparator" parent="."]
layout_mode = 2

[node name="HostStationLabel" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Host station type:"
horizontal_alignment = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="HostStationRoboTextureRect" type="TextureRect" parent="HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2

[node name="HostStationRoboOptionButton" type="OptionButton" parent="HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12

[node name="HSeparator5" type="HSeparator" parent="."]
layout_mode = 2

[node name="Label4" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Host station behavior in file"
horizontal_alignment = 1

[node name="HBoxContainer4" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LoadBehaviorFileButton" type="Button" parent="HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Load behavior from file"

[node name="SaveBehaviorFileButton" type="Button" parent="HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "Save behavior to file"
